--- a/Test/templates/Test/snippets/detailtestsession.html
+++ b/Test/templates/Test/snippets/detailtestsession.html
@@ -1,44 +1,131 @@
 <ul class="list-group block list-group-flush text-left">
-    <li class="list-group-item"><div class="row">
-        <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Nama Peserta</div></div>
-        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{testTakerInfo.testTakerName}}</div></div>
-        </div></li>
-    <li class="list-group-item"><div class="row">
-        <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Kelas / Grup</div></div>
-        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{testTakerInfo.testTakerGroup}}</div></div>
-        </div></li>
-    <li class="list-group-item"><div class="row">
-        <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Kode Tes</div></div>
-        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{testInfo.testCode}}</div></div>
-        </div></li>
-    <li class="list-group-item"><div class="row">
-        <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Penyedia Tes</div></div>
-        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{testInfo.testAuthor}}</div></div>
-        </div></li>
-    <li class="list-group-item"><div class="row">
-        <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Judul Tes</div></div>
-        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{testInfo.testTitle}}</div></div>
-        </div></li>
-    <li class="list-group-item"><div class="row">
-        <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Jumlah Soal</div></div>
-        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{questionCount}}</div></div>
-        </div></li>
-    <li class="list-group-item"><div class="row">
-        <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Jadwal / Waktu Mulai Tes</div></div>
-        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{testInfo.testSchedule | date:"l, d F Y"}}</div></div>
-        </div></li>
-    <li class="list-group-item"><div class="row">
-        <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Batas Waktu Pengerjaan</div></div>
-        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{testInfo.timeLimit}} Menit</div></div>
-        </div></li>
-    <li class="list-group-item"><div class="row">
-        <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Kode Sesi</div></div>
-        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{user}}</div></div>
-        </div></li>
-    <li class="list-group-item"><div class="row">
-        <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Kunci Sesi Anda</div></div>
-        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{testTakerInfo.session_password}}</div></div>
-        <small id="emailHelp" class="form-text text-muted">Catatlah Kunci Sesi ini. Ini akan digunakan untuk melanjutkan tes jika terjadi galat. 
-        <strong>Catatlah bersama Kode Sesi yang dibuat dihalaman sebelumnya</strong> </small>
-        </div></li>
-      </ul>
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-md-3 pl-2 my-auto">
+        <div class="card-title text-muted my-auto h6 text-uppercase">
+          Nama Peserta
+        </div>
+      </div>
+      <div class="col-md-9 pl-2">
+        <div class="card-text my-auto">{{testTakerInfo.testTakerName}}</div>
+      </div>
+    </div>
+  </li>
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-md-3 pl-2 my-auto">
+        <div class="card-title text-muted my-auto h6 text-uppercase">
+          Kelas / Grup
+        </div>
+      </div>
+      <div class="col-md-9 pl-2">
+        <div class="card-text my-auto">{{testTakerInfo.testTakerGroup}}</div>
+      </div>
+    </div>
+  </li>
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-md-3 pl-2 my-auto">
+        <div class="card-title text-muted my-auto h6 text-uppercase">
+          Kode Tes
+        </div>
+      </div>
+      <div class="col-md-9 pl-2">
+        <div class="card-text my-auto">{{testInfo.testCode}}</div>
+      </div>
+    </div>
+  </li>
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-md-3 pl-2 my-auto">
+        <div class="card-title text-muted my-auto h6 text-uppercase">
+          Penyedia Tes
+        </div>
+      </div>
+      <div class="col-md-9 pl-2">
+        <div class="card-text my-auto">{{testInfo.testAuthor}}</div>
+      </div>
+    </div>
+  </li>
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-md-3 pl-2 my-auto">
+        <div class="card-title text-muted my-auto h6 text-uppercase">
+          Judul Tes
+        </div>
+      </div>
+      <div class="col-md-9 pl-2">
+        <div class="card-text my-auto">{{testInfo.testTitle}}</div>
+      </div>
+    </div>
+  </li>
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-md-3 pl-2 my-auto">
+        <div class="card-title text-muted my-auto h6 text-uppercase">
+          Jumlah Soal
+        </div>
+      </div>
+      <div class="col-md-9 pl-2">
+        <div class="card-text my-auto">{{questionCount}}</div>
+      </div>
+    </div>
+  </li>
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-md-3 pl-2 my-auto">
+        <div class="card-title text-muted my-auto h6 text-uppercase">
+          Jadwal / Waktu Mulai Tes
+        </div>
+      </div>
+      <div class="col-md-9 pl-2">
+        <div class="card-text my-auto">
+          {{testInfo.testSchedule | date:"l, d F Y"}}
+        </div>
+      </div>
+    </div>
+  </li>
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-md-3 pl-2 my-auto">
+        <div class="card-title text-muted my-auto h6 text-uppercase">
+          Batas Waktu Pengerjaan
+        </div>
+      </div>
+      <div class="col-md-9 pl-2">
+        <div class="card-text my-auto">{{testInfo.timeLimit}} Menit</div>
+      </div>
+    </div>
+  </li>
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-md-3 pl-2 my-auto">
+        <div class="card-title text-muted my-auto h6 text-uppercase">
+          Kode Sesi
+        </div>
+      </div>
+      <div class="col-md-9 pl-2">
+        <div class="card-text my-auto">{{user}}</div>
+      </div>
+    </div>
+  </li>
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-md-3 pl-2 my-auto">
+        <div class="card-title text-muted my-auto h6 text-uppercase">
+          Kunci Sesi Anda
+        </div>
+      </div>
+      <div class="col-md-9 pl-2">
+        <div class="card-text my-auto">{{testTakerInfo.session_password}}</div>
+      </div>
+      <small id="emailHelp" class="form-text text-muted"
+        >Catatlah Kunci Sesi ini. Ini akan digunakan untuk melanjutkan tes jika
+        terjadi galat.
+        <strong
+          >Catatlah bersama Kode Sesi yang dibuat dihalaman sebelumnya</strong
+        >
+      </small>
+    </div>
+  </li>
+</ul>
